更新说明文档